training classifier + board

--- a/notebooks/esm.ipynb
+++ b/notebooks/esm.ipynb
@@ -608,19 +608,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 83,
+   "id": "872e156f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "huggingface/tokenizers: The current process just got forked, after parallelism has already been used. Disabling parallelism to avoid deadlocks...\n",
+      "To disable this warning, you can either:\n",
+      "\t- Avoid using `tokenizers` before the fork if possible\n",
+      "\t- Explicitly set the environment variable TOKENIZERS_PARALLELISM=(true | false)\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Collecting tensorboard\n",
+      "  Downloading tensorboard-2.20.0-py3-none-any.whl.metadata (1.8 kB)\n",
+      "Collecting absl-py>=0.4 (from tensorboard)\n",
+      "  Downloading absl_py-2.3.1-py3-none-any.whl.metadata (3.3 kB)\n",
+      "Collecting grpcio>=1.48.2 (from tensorboard)\n",
+      "  Downloading grpcio-1.75.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl.metadata (3.7 kB)\n",
+      "Collecting markdown>=2.6.8 (from tensorboard)\n",
+      "  Downloading markdown-3.9-py3-none-any.whl.metadata (5.1 kB)\n",
+      "Requirement already satisfied: numpy>=1.12.0 in /n/home06/tbush/envs/esm/lib/python3.12/site-packages (from tensorboard) (2.3.3)\n",
+      "Requirement already satisfied: packaging in /n/home06/tbush/envs/esm/lib/python3.12/site-packages (from tensorboard) (25.0)\n",
+      "Requirement already satisfied: pillow in /n/home06/tbush/envs/esm/lib/python3.12/site-packages (from tensorboard) (11.3.0)\n",
+      "Collecting protobuf!=4.24.0,>=3.19.6 (from tensorboard)\n",
+      "  Downloading protobuf-6.33.0-cp39-abi3-manylinux2014_x86_64.whl.metadata (593 bytes)\n",
+      "Requirement already satisfied: setuptools>=41.0.0 in /n/home06/tbush/envs/esm/lib/python3.12/site-packages (from tensorboard) (80.9.0)\n",
+      "Collecting tensorboard-data-server<0.8.0,>=0.7.0 (from tensorboard)\n",
+      "  Downloading tensorboard_data_server-0.7.2-py3-none-any.whl.metadata (1.1 kB)\n",
+      "Collecting werkzeug>=1.0.1 (from tensorboard)\n",
+      "  Downloading werkzeug-3.1.3-py3-none-any.whl.metadata (3.7 kB)\n",
+      "Requirement already satisfied: typing-extensions~=4.12 in /n/home06/tbush/envs/esm/lib/python3.12/site-packages (from grpcio>=1.48.2->tensorboard) (4.15.0)\n",
+      "Requirement already satisfied: MarkupSafe>=2.1.1 in /n/home06/tbush/envs/esm/lib/python3.12/site-packages (from werkzeug>=1.0.1->tensorboard) (3.0.3)\n",
+      "Downloading tensorboard-2.20.0-py3-none-any.whl (5.5 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m5.5/5.5 MB\u001b[0m \u001b[31m30.3 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0mm0:00:01\u001b[0m\n",
+      "\u001b[?25hDownloading tensorboard_data_server-0.7.2-py3-none-any.whl (2.4 kB)\n",
+      "Downloading absl_py-2.3.1-py3-none-any.whl (135 kB)\n",
+      "Downloading grpcio-1.75.1-cp312-cp312-manylinux2014_x86_64.manylinux_2_17_x86_64.whl (6.4 MB)\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m6.4/6.4 MB\u001b[0m \u001b[31m36.5 MB/s\u001b[0m  \u001b[33m0:00:00\u001b[0m\n",
+      "\u001b[?25hDownloading markdown-3.9-py3-none-any.whl (107 kB)\n",
+      "Downloading protobuf-6.33.0-cp39-abi3-manylinux2014_x86_64.whl (323 kB)\n",
+      "Downloading werkzeug-3.1.3-py3-none-any.whl (224 kB)\n",
+      "Installing collected packages: werkzeug, tensorboard-data-server, protobuf, markdown, grpcio, absl-py, tensorboard\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m7/7\u001b[0m [tensorboard]\u001b[0m [tensorboard]data-server]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed absl-py-2.3.1 grpcio-1.75.1 markdown-3.9 protobuf-6.33.0 tensorboard-2.20.0 tensorboard-data-server-0.7.2 werkzeug-3.1.3\n"
+     ]
+    }
+   ],
+   "source": [
+    "!pip install tensorboard"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
    "id": "24177e74",
    "metadata": {},
    "outputs": [],
    "source": [
     "from torch.utils.data import Dataset, DataLoader, random_split\n",
-    "from sklearn.metrics import roc_auc_score, accuracy_score\n",
-    "import random"
+    "from sklearn.metrics import accuracy_score, roc_auc_score, roc_curve, precision_recall_curve\n",
+    "import random\n",
+    "from torch.utils.tensorboard import SummaryWriter\n",
+    "import matplotlib.pyplot as plt\n",
+    "writer = SummaryWriter(log_dir=\"/n/home06/tbush/runs/wtmt_proto\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 87,
    "id": "c7d86383",
    "metadata": {},
    "outputs": [],
@@ -631,7 +693,7 @@
     "    y = torch.as_tensor(labels, dtype=torch.float32)  # (B,)\n",
     "    return x, y\n",
     "\n",
-    "# --- tiny helpers ---\n",
+    "# -------- one epoch --------\n",
     "def epoch_pass(model, loader, device, WT_t, criterion, optimizer=None):\n",
     "    train = optimizer is not None\n",
     "    model.train() if train else model.eval()\n",
@@ -639,11 +701,13 @@
     "    losses, all_probs, all_targets = [], [], []\n",
     "    for x, y in loader:\n",
     "        x, y = x.to(device), y.to(device)\n",
+    "\n",
     "        if train:\n",
     "            optimizer.zero_grad(set_to_none=True)\n",
     "\n",
-    "        logits = model(WT_t, x)\n",
+    "        logits = model(WT_t, x)                     # (B,)\n",
     "        loss = criterion(logits, y)\n",
+    "\n",
     "        if train:\n",
     "            loss.backward()\n",
     "            optimizer.step()\n",
@@ -659,12 +723,20 @@
     "    all_targets = np.concatenate(all_targets) if all_targets else np.array([])\n",
     "    preds = (all_probs >= 0.5).astype(int) if len(all_probs) else np.array([])\n",
     "    acc = accuracy_score(all_targets, preds) if len(preds) else float(\"nan\")\n",
-    "    return float(np.mean(losses)), acc\n",
+    "    try:\n",
+    "        auc = roc_auc_score(all_targets, all_probs) if len(np.unique(all_targets)) > 1 else float(\"nan\")\n",
+    "    except ValueError:\n",
+    "        auc = float(\"nan\")\n",
     "\n",
-    "# --- simple prototype training ---\n",
+    "    return float(np.mean(losses)), acc, auc, all_probs, all_targets\n",
+    "\n",
+    "# -------- training loop --------\n",
     "def train_prototype(\n",
     "    df, n, client, WT, in_dim=1152,\n",
-    "    batch_size=32, epochs=5, lr=3e-4, val_split=0.2, seed=42, device=None\n",
+    "    batch_size=32, epochs=20, lr=3e-4, val_split=0.2,\n",
+    "    seed=42, device=None, patience=4,\n",
+    "    log_dir=None,           # e.g., \"runs/wtmt_proto\" to enable TensorBoard\n",
+    "    curve_every=2           # log ROC/PR every N epochs if TB is on\n",
     "):\n",
     "    # Dataset & split\n",
     "    full_ds = CustomDataset(df, n, client)\n",
@@ -684,13 +756,13 @@
     "    # WT tensor\n",
     "    WT_t = torch.as_tensor(WT, dtype=torch.float32)\n",
     "    if WT_t.dim() == 2:\n",
-    "        WT_t = WT_t.unsqueeze(0)  # -> (1, L, D)\n",
+    "        WT_t = WT_t.unsqueeze(0)  # (1, L, D)\n",
     "    WT_t = WT_t.to(device)\n",
     "\n",
     "    # Model\n",
     "    model = WTMutClassifier(in_dim=in_dim, hidden=512, n_layers=2, n_heads=8, dropout=0.1, max_len=256).to(device)\n",
     "\n",
-    "    # ---- Compute class weights for imbalance ----\n",
+    "    # Class weighting (global)\n",
     "    labels = np.array([full_ds[i][1] for i in range(len(full_ds))])\n",
     "    n_pos, n_neg = (labels == 1).sum(), (labels == 0).sum()\n",
     "    pos_weight = torch.tensor(n_neg / max(n_pos, 1), dtype=torch.float32).to(device)\n",
@@ -699,31 +771,79 @@
     "    # Optimizer\n",
     "    optimizer = torch.optim.AdamW(model.parameters(), lr=lr)\n",
     "\n",
-    "    # Train loop\n",
+    "    # TensorBoard writer (optional)\n",
+    "    writer = SummaryWriter(log_dir=log_dir) if log_dir is not None else None\n",
+    "\n",
+    "    # Training loop with early stopping (no checkpoint saving)\n",
+    "    best_auc = -1.0\n",
+    "    patience_left = patience\n",
+    "\n",
     "    for ep in range(1, epochs + 1):\n",
-    "        tr_loss, tr_acc = epoch_pass(model, train_loader, device, WT_t, criterion, optimizer=optimizer)\n",
-    "        va_loss, va_acc = epoch_pass(model, val_loader, device, WT_t, criterion, optimizer=None)\n",
-    "        print(f\"Epoch {ep:02d} | train_loss {tr_loss:.4f} acc {tr_acc:.4f} | \"\n",
-    "              f\"val_loss {va_loss:.4f} acc {va_acc:.4f}\")\n",
+    "        tr_loss, tr_acc, tr_auc, _, _ = epoch_pass(model, train_loader, device, WT_t, criterion, optimizer)\n",
+    "        va_loss, va_acc, va_auc, va_probs, va_targets = epoch_pass(model, val_loader, device, WT_t, criterion)\n",
+    "\n",
+    "        print(f\"Epoch {ep:02d} | \"\n",
+    "              f\"train_loss {tr_loss:.4f} acc {tr_acc:.4f} auc {tr_auc:.4f} | \"\n",
+    "              f\"val_loss {va_loss:.4f} acc {va_acc:.4f} auc {va_auc:.4f}\")\n",
+    "\n",
+    "        # --- TensorBoard scalars ---\n",
+    "        if writer is not None:\n",
+    "            writer.add_scalar(\"Loss/train\", tr_loss, ep)\n",
+    "            writer.add_scalar(\"Loss/val\",   va_loss, ep)\n",
+    "            writer.add_scalar(\"Acc/train\",  tr_acc, ep)\n",
+    "            writer.add_scalar(\"Acc/val\",    va_acc, ep)\n",
+    "            writer.add_scalar(\"AUC/train\",  tr_auc, ep)\n",
+    "            writer.add_scalar(\"AUC/val\",    va_auc, ep)\n",
+    "\n",
+    "            # Optional curves every few epochs (requires matplotlib)\n",
+    "            if (ep % curve_every == 0) and len(np.unique(va_targets)) > 1:\n",
+    "                # ROC\n",
+    "                fpr, tpr, _ = roc_curve(va_targets, va_probs)\n",
+    "                fig = plt.figure()\n",
+    "                plt.plot(fpr, tpr)\n",
+    "                plt.xlabel(\"FPR\"); plt.ylabel(\"TPR\"); plt.title(f\"ROC (val) epoch {ep}\")\n",
+    "                writer.add_figure(\"ROC/val\", fig, global_step=ep)\n",
+    "                plt.close(fig)\n",
+    "\n",
+    "                # PR\n",
+    "                prec, rec, _ = precision_recall_curve(va_targets, va_probs)\n",
+    "                fig = plt.figure()\n",
+    "                plt.plot(rec, prec)\n",
+    "                plt.xlabel(\"Recall\"); plt.ylabel(\"Precision\"); plt.title(f\"PR (val) epoch {ep}\")\n",
+    "                writer.add_figure(\"PR/val\", fig, global_step=ep)\n",
+    "                plt.close(fig)\n",
+    "\n",
+    "        # --- early stopping on val AUC ---\n",
+    "        if not np.isnan(va_auc) and va_auc > best_auc:\n",
+    "            best_auc = va_auc\n",
+    "            patience_left = patience\n",
+    "        else:\n",
+    "            patience_left -= 1\n",
+    "            if patience_left <= 0:\n",
+    "                print(f\"Early stopping at epoch {ep}. Best val AUC: {best_auc:.4f}\")\n",
+    "                break\n",
+    "\n",
+    "    if writer is not None:\n",
+    "        writer.close()\n",
     "\n",
     "    return model"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 88,
    "id": "1135af8a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e779fb21bc49404cae4676e4f006ef82",
+       "model_id": "3f8815aa1b424ec3997f32f0437f730c",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "Embedding:   0%|          | 0/500 [00:00<?, ?it/s]"
+       "Embedding:   0%|          | 0/1000 [00:00<?, ?it/s]"
       ]
      },
      "metadata": {},
@@ -741,37 +861,31 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Epoch 01 | train_loss 0.7051 acc 0.5150 | val_loss 0.6360 acc 0.4400\n",
-      "Epoch 02 | train_loss 0.5645 acc 0.5550 | val_loss 0.6008 acc 0.5600\n",
-      "Epoch 03 | train_loss 0.5429 acc 0.5575 | val_loss 0.5513 acc 0.4400\n",
-      "Epoch 04 | train_loss 0.5504 acc 0.4800 | val_loss 0.5517 acc 0.4400\n",
-      "Epoch 05 | train_loss 0.5461 acc 0.5350 | val_loss 0.5510 acc 0.4400\n",
-      "Epoch 06 | train_loss 0.5472 acc 0.5275 | val_loss 0.5548 acc 0.6200\n",
-      "Epoch 07 | train_loss 0.5421 acc 0.5100 | val_loss 0.5894 acc 0.5600\n",
-      "Epoch 08 | train_loss 0.5164 acc 0.6125 | val_loss 0.5231 acc 0.6900\n",
-      "Epoch 09 | train_loss 0.4658 acc 0.7175 | val_loss 0.5240 acc 0.6600\n",
-      "Epoch 10 | train_loss 0.4362 acc 0.7425 | val_loss 0.5624 acc 0.6800\n",
-      "Epoch 11 | train_loss 0.4059 acc 0.7950 | val_loss 0.5191 acc 0.6700\n",
-      "Epoch 12 | train_loss 0.3822 acc 0.8000 | val_loss 0.5552 acc 0.6500\n",
-      "Epoch 13 | train_loss 0.3517 acc 0.8175 | val_loss 0.5304 acc 0.6300\n",
-      "Epoch 14 | train_loss 0.3442 acc 0.8025 | val_loss 0.6135 acc 0.5900\n",
-      "Epoch 15 | train_loss 0.3141 acc 0.8350 | val_loss 0.6576 acc 0.6200\n",
-      "Epoch 16 | train_loss 0.3300 acc 0.7775 | val_loss 0.7324 acc 0.6400\n",
-      "Epoch 17 | train_loss 0.2694 acc 0.8500 | val_loss 0.8225 acc 0.6900\n",
-      "Epoch 18 | train_loss 0.2898 acc 0.8450 | val_loss 0.6683 acc 0.6500\n",
-      "Epoch 19 | train_loss 0.2797 acc 0.8500 | val_loss 0.9118 acc 0.6200\n",
-      "Epoch 20 | train_loss 0.2710 acc 0.8425 | val_loss 0.7805 acc 0.6200\n"
+      "Epoch 01 | train_loss 0.8520 acc 0.4813 auc 0.4677 | val_loss 0.6018 acc 0.3700 auc 0.6565\n",
+      "Epoch 02 | train_loss 0.6213 acc 0.4913 auc 0.4988 | val_loss 0.6274 acc 0.3700 auc 0.6785\n",
+      "Epoch 03 | train_loss 0.6225 acc 0.5150 auc 0.5248 | val_loss 0.6373 acc 0.3700 auc 0.6945\n",
+      "Epoch 04 | train_loss 0.6277 acc 0.5200 auc 0.5148 | val_loss 0.5708 acc 0.6900 auc 0.7168\n",
+      "Epoch 05 | train_loss 0.5480 acc 0.6937 auc 0.7110 | val_loss 0.4970 acc 0.7300 auc 0.7234\n",
+      "Epoch 06 | train_loss 0.5064 acc 0.7350 auc 0.7659 | val_loss 0.5306 acc 0.6800 auc 0.7705\n",
+      "Epoch 07 | train_loss 0.4699 acc 0.7562 auc 0.8052 | val_loss 0.5026 acc 0.7200 auc 0.7855\n",
+      "Epoch 08 | train_loss 0.4749 acc 0.7700 auc 0.7978 | val_loss 0.4576 acc 0.7400 auc 0.7889\n",
+      "Epoch 09 | train_loss 0.4523 acc 0.7812 auc 0.8086 | val_loss 0.4664 acc 0.7250 auc 0.8001\n",
+      "Epoch 10 | train_loss 0.4219 acc 0.7975 auc 0.8258 | val_loss 0.4871 acc 0.7350 auc 0.7964\n",
+      "Epoch 11 | train_loss 0.4097 acc 0.8013 auc 0.8487 | val_loss 0.4783 acc 0.7350 auc 0.7863\n",
+      "Epoch 12 | train_loss 0.4201 acc 0.7837 auc 0.8453 | val_loss 0.5556 acc 0.6750 auc 0.7608\n",
+      "Epoch 13 | train_loss 0.3977 acc 0.8075 auc 0.8567 | val_loss 0.5226 acc 0.6900 auc 0.7758\n",
+      "Early stopping at epoch 13. Best val AUC: 0.8001\n"
      ]
     }
    ],
    "source": [
-    "model = train_prototype(gfp_dataset_original, n=500, client=client, WT=WT, in_dim=1152, epochs=20, batch_size=32)"
+    "model = train_prototype(gfp_dataset_original, n=1000, client=client, WT=WT, in_dim=1152, epochs=20, batch_size=32)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8565dbf2",
+   "id": "925b86db",
    "metadata": {},
    "outputs": [],
    "source": []
