--- a/notebooks/effective_strain.ipynb
+++ b/notebooks/effective_strain.ipynb
@@ -1851,7 +1851,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "alphafold",
    "language": "python",
    "name": "python3"
   },
@@ -1865,7 +1865,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.18"
+   "version": "3.9.23"
   }
  },
  "nbformat": 4,
